# SOFTX_2018_109

./: .gitignore  CMakeLists.txt  README.md  controls.h  datatypes.h  dialog_about.c  dialog_about.h  dialog_area_calibration.c  dialog_area_calibration.h  fddata.c  fddata.h  file-utils.c  file-utils.h  fit-utils.c  fit-utils.h  gui-utils.c  gui-utils.h  instrument.c  instrument.h  mc-utils.c  mc-utils.h  niget-cmd.c  niget-common.c  niget-common.h  niget-gtk.c  niget-gtk.h  odrwrap.f90  odrwrap_hertz_radial.f90  odrwrap_linear.f90  odrwrap_power_2param.f90  odrwrap_power_3param.f90  settings.c  settings.h  settings.hertz  settings.hertzodr  settings.opodr  settings.slopes  settings.unc  tool_Ph2.c  tool_Ph2.h  (+72 more)
cmake/Modules/: FindGwyddion.cmake
doc/: Fh2.tex  GUMunccalc.tex  Makefile  areacalibration.tex  contactunc.tex  data_fitting.tex  data_time_area.tex  dataformat.txt  epwork.tex  hertz.tex  hertzodr.tex  hertzodrunc.tex  hertzunc.tex  install.tex  leastsquares.tex  mainwindow.tex  montecarlo.tex  niget.bib  niget.tex  op.tex  opodr.tex  opodrunc.tex  opunc.tex  popin.tex  stiffness.tex  stiffnessunc.tex  tangent.tex  tangentunc.tex  totalleastsquares.tex  twoslopes.tex  twoslopesunc.tex  uncertainties.tex
examples/: AntonPaar.txt  AntonPaar_areafile.ind  Hysitron.txt  Hysitron_areafile.ara  OliverPharr-tangent-slopes.nig  popins.nig  stiffness.nig
gwyddion/: Makefile.in.patch  makegwy.sh
msvc2015/: indent-toolbox.sln
msvc2015/indent-toolbox/: indent-toolbox.vcxproj  indent-toolbox.vcxproj.filters
msvc2015/odr/: odr.def  odr.vfproj
